# SolveRubickCubeEasy

./: .clang-format  README.md
SRCE/: Doxyfile  cube.cpp  cube.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pokreti.cpp  pokreti.h  rubik.cpp  rubik.h  rubik.hpp  rubik.ui  srce.pro  srce.pro.user.5fb29cf  srce.pro.user.9fac9d1
SRCE/Documentation/html/: annotated.html  classCube-members.html  classCube.html  classGLWidget-members.html  classGLWidget.html  classMoveBuffer-members.html  classMoveBuffer.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_vars.html  hierarchy.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h_source.html  menudata.js  rubik_8h_source.html
SRCE/Documentation/html/search/: all_2.js  all_5.js  all_7.js  all_8.js  classes_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  searchdata.js  variables_0.js
SRCE/Documentation/latex/: annotated.tex  classCube.tex  classGLWidget.tex  classMoveBuffer.tex  files.tex  hierarchy.tex  main_8cpp.tex  mainwindow_8cpp.tex  refman.tex
SolveCube/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  rubik.cpp  rubik.h  rubik.ui
SolveRubickCubeEasy/: CMakeLists.txt  main.cpp  mainwindow.cpp  rubik.cpp
build-srce-Desktop-Profile/: Makefile  moc_mainwindow.cpp  moc_rubik.cpp  srce  srce.debug  ui_rubik.h
build-srce-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile  WApp  moc_mainwindow.cpp  moc_rubik.cpp  ui_rubik.h
